# kilmister

./: CMakeLists.txt
src/: config.c  config.h  creds.c  creds.h  import_ui.c  import_ui.h  main.c  signals_gui.c  signals_gui.h
src/api/: lemmy.h  request.c  request.h
src/api/v3/: auth.c  lemmy_apiv3.h  post.c
src/api/v4/: auth.c  lemmy_apiv4.h
src/ui/: kilmister.cmb  main.ui
